<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.microsoft.hdinsight</groupId>
        <artifactId>azure-toolkit-ide-hdinsight-libs</artifactId>
        <version>0.1.0</version>
    </parent>

    <artifactId>azure-toolkit-ide-sqlserver-spark-lib</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.microsoft.azure</groupId>
            <artifactId>azure-toolkit-ide-common-lib</artifactId>
        </dependency>
        <dependency>
            <groupId>com.microsoft.hdinsight</groupId>
            <artifactId>hdinsight-node-common</artifactId>
        </dependency>
    </dependencies>

</project>